ossm/keycloak-serviceentry.yml
# This allows for external service calls to RH-SSO
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: keycloak-egress
spec:
  hosts:
  - %RHSSO_HOST%
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
