ossm/authpolicy-allow-all.yml
# Rule for Envoy sidecar servers to open up all authorization to the frontend service

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend-allow-all
spec:
  selector:
    matchLabels:
      app: frontend
      group: oidc
  rules:
  - {}
