ossm/frontend-request-auth.yml
# Rule for boards service servers to only accept mTLS + JWT traffic
#
apiVersion: "security.istio.io/v1beta1"
kind: RequestAuthentication
metadata:
  name: "frontend-jwt"
spec:
  selector:
    matchLabels:
      app: frontend
      group: oidc
  jwtRules:
  - issuer: %RHSSO_URL%/realms/%REALM_ID%
    jwksUri: %RHSSO_URL%/realms/%REALM_ID%/protocol/openid-connect/certs
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend-shared
spec:
  selector:
    matchLabels:
      app: frontend
      group: oidc
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        methods: ["GET"]
